# word2vec-cuda

./: README.md
src/: CMakeLists.txt  dataset.cpp  dataset.h  utils.cu  utils.h
src/cpu/: evaluate.py  main.py  model.py  train.py
src/cpu/data/: dataset.py  text8_500k
src/w2v_base_cuda/: kernels.cu  kernels.h  main.cu
src/w2v_optimized_cuda/: kernels.cu  kernels.h  main.cu
